--- a/Carbon.Core/Carbon.CodeGen/Carbon.CodeGen.csproj
+++ b/Carbon.Core/Carbon.CodeGen/Carbon.CodeGen.csproj
@@ -1,18 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Clean;Build">
   <PropertyGroup>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <TargetFrameworks>net48</TargetFrameworks>
+    <ProjectGuid>{A65D823D-2855-4D0C-8DA8-E10E1FAC426F}</ProjectGuid>
 
-    <StartupObject>Carbon.CodeGen.Program</StartupObject>
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
     <OutputType>Exe</OutputType>
+    <StartupObject>Carbon.CodeGen.Program</StartupObject>
+    <TargetFrameworks>net48</TargetFrameworks>
 
-    <ProjectGuid>{A65D823D-2855-4D0C-8DA8-E10E1FAC426F}</ProjectGuid>
-    <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
+    <Configurations>Debug;Release</Configurations>
+    <PlatformTarget>x64</PlatformTarget>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <PropertyGroup>    <!-- User defined properties -->
     <Product>Carbon</Product>
     <AssemblyName>Carbon.CodeGen</AssemblyName>
     <Version>1.0.0.0</Version>
@@ -24,48 +25,30 @@
     <Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
-    <VersionSuffix>$(Configuration)</VersionSuffix>
-
-    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+  <PropertyGroup>    <!-- Automatically generated properties -->
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
+    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+    <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
+    <VersionSuffix>$(Configuration)</VersionSuffix>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;WIN</DefineConstants>
+    <DefineConstants>DEBUG;$(DefineConstants)</DefineConstants>
     <OutputPath>bin\Debug\</OutputPath>
     <DebugType>embedded</DebugType>
-    <Optimize>true</Optimize>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;UNIX</DefineConstants>
-    <OutputPath>bin\DebugUnix\</OutputPath>
-    <DebugType>embedded</DebugType>
-    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>WIN</DefineConstants>
+    <DefineConstants>$(DefineConstants)</DefineConstants>
     <OutputPath>bin\Release\</OutputPath>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'ReleaseUnix'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>UNIX</DefineConstants>
-    <OutputPath>bin\ReleaseUnix\</OutputPath>
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-  </PropertyGroup>
-
-  <ItemGroup>
+  <ItemGroup>    <!-- System libs -->
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -74,149 +57,15 @@
     <Reference Include="System" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="..\..\External\Humanlights.MCS.dll"/>
-    <Reference Include="..\..\External\Humanlights.System.dll"/>
-    <Reference Include="..\..\External\Humanlights.Unity.dll"/>
-    <Reference Include="..\..\External\Humanlights.Unity.Compiler.dll"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\0Harmony.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Assembly-CSharp.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Assembly-CSharp-firstpass.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\EasyAntiCheat.Client.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\EasyAntiCheat.Server.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Console.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Network.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Rcon.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Sqlite.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Steamworks.Win64.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.System.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Unity.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.UnityEngine.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Fleck.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Newtonsoft.Json.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Data.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Global.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Harmony.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Localization.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Platform.Common.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.AIModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.ImageConversionModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.PhysicsModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.SharedInternalsModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.TextRenderingModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UI.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestAssetBundleModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestAudioModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestTextureModule.dll">
-      <PrivateAssets>all</PrivateAssets>
-      <SpecificVersion>false</SpecificVersion>
-    </Reference>
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestWWWModule.dll">
+  <ItemGroup>    <!-- External libs -->
+    <Reference Include="..\..\External\*.dll" />
+    <Reference Include="..\..\Rust\windows\RustDedicated_Data\Managed\*.dll">
       <PrivateAssets>all</PrivateAssets>
       <SpecificVersion>false</SpecificVersion>
     </Reference>
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup>    <!-- Nuget packages -->
     <PackageReference Include="Costura.Fody" Version="5.7.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -224,7 +73,15 @@
     <PackageReference Include="protobuf-net.Core" Version="3.1.17" />
   </ItemGroup>
 
-  <ItemGroup>
+
+  <ItemGroup>    <!-- Project dependencies -->
     <ProjectReference Include="..\Carbon\Carbon.csproj"/>
   </ItemGroup>
+
+  <Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+    <Message Text="&gt;&gt; Product: $(Product)" Importance="high" />
+    <Message Text="&gt;&gt; Build ID: $(VersionPrefix)-$(VersionSuffix)" Importance="high" />
+    <Message Text="&gt;&gt; Build Target: $(Configuration)|$(Platform)" Importance="high" />
+    <Message Text="&gt;&gt; Build Assembly Name: $(AssemblyName)" Importance="high" />
+  </Target>
 </Project>
