--- a/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
+++ b/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Clean;Build">
   <PropertyGroup>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <TargetFrameworks>net48</TargetFrameworks>
+    <ProjectGuid>{6872448A-98BF-45B3-88D8-AF80F8E562CA}</ProjectGuid>
 
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
+    <OutputType>Library</OutputType>
+    <TargetFrameworks>net48</TargetFrameworks>
 
-    <ProjectGuid>{6872448A-98BF-45B3-88D8-AF80F8E562CA}</ProjectGuid>
-    <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
+    <Configurations>Debug;Release</Configurations>
+    <PlatformTarget>x64</PlatformTarget>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <PropertyGroup>    <!-- User defined properties -->
     <Product>Carbon</Product>
     <AssemblyName>Carbon.Doorstop</AssemblyName>
     <Version>1.1.0.0</Version>
@@ -22,48 +24,37 @@
     <Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
-    <VersionSuffix>$(Configuration)</VersionSuffix>
-
-    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+  <PropertyGroup>    <!-- Automatically generated properties -->
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
+    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+    <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
+    <VersionSuffix>$(Configuration)</VersionSuffix>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;WIN</DefineConstants>
+    <DefineConstants>DEBUG;$(DefineConstants)</DefineConstants>
     <OutputPath>bin\Debug\</OutputPath>
     <DebugType>embedded</DebugType>
-    <Optimize>true</Optimize>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;UNIX</DefineConstants>
-    <OutputPath>bin\DebugUnix\</OutputPath>
-    <DebugType>embedded</DebugType>
-    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>WIN</DefineConstants>
+    <DefineConstants>$(DefineConstants)</DefineConstants>
     <OutputPath>bin\Release\</OutputPath>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'ReleaseUnix'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>UNIX</DefineConstants>
-    <OutputPath>bin\ReleaseUnix\</OutputPath>
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-  </PropertyGroup>
-
-  <ItemGroup>
+  <ItemGroup>    <!-- System libs -->
     <Reference Include="System" />
   </ItemGroup>
+
+  <Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+    <Message Text="&gt;&gt; Product: $(Product)" Importance="high" />
+    <Message Text="&gt;&gt; Build ID: $(VersionPrefix)-$(VersionSuffix)" Importance="high" />
+    <Message Text="&gt;&gt; Build Target: $(Configuration)|$(Platform)" Importance="high" />
+    <Message Text="&gt;&gt; Build Assembly Name: $(AssemblyName)" Importance="high" />
+  </Target>
 </Project>
