--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Build">
-  <PropertyGroup>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <TargetFrameworks>net48</TargetFrameworks>
+  <PropertyGroup>    <!-- General build information -->
+    <ProjectGuid>{DB7AC4B9-E0F3-4E8F-B977-DD32709359A4}</ProjectGuid>
 
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
     <OutputType>Library</OutputType>
+    <TargetFrameworks>net48</TargetFrameworks>
 
-    <ProjectGuid>{DB7AC4B9-E0F3-4E8F-B977-DD32709359A4}</ProjectGuid>
     <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
+    <PlatformTarget>x64</PlatformTarget>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <PropertyGroup>    <!-- User defined properties -->
     <Product>Carbon</Product>
     <AssemblyName>Carbon</AssemblyName>
-    <Version>1.$([System.DateTime]::UtcNow.ToString('yy.ddMM')).10</Version>
 
     <Company>Raul-Sorin Sorban</Company>
     <Copyright>Copyright © Carbon 2022</Copyright>
@@ -23,49 +23,43 @@
     <Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <PropertyGroup>    <!-- Automatically generated properties -->
     <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
     <VersionSuffix>$(Configuration)</VersionSuffix>
-
-    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
+    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
     <RootNamespace>$(MSBuildProjectName.Replace(" ", "_")).Core</RootNamespace>
+    <Version>1.$([System.DateTime]::UtcNow.ToString('yy.ddMM')).10</Version>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;TRACE;WIN</DefineConstants>
-    <OutputPath>bin\Debug\</OutputPath>
+  <PropertyGroup>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(Configuration.Contains('Debug'))">
     <DebugType>embedded</DebugType>
-    <Optimize>true</Optimize>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
+    <DefineConstants>DEBUG;$(DefineConstants)</DefineConstants>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;TRACE;UNIX</DefineConstants>
-    <OutputPath>bin\DebugUnix\</OutputPath>
-    <DebugType>embedded</DebugType>
-    <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>WIN</DefineConstants>
-    <OutputPath>bin\Release\</OutputPath>
+  <PropertyGroup Condition="$(Configuration.Contains('Release'))">
     <DebugType>none</DebugType>
+    <DefineConstants>$(DefineConstants)</DefineConstants>
     <Optimize>true</Optimize>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' == 'ReleaseUnix'">
+    <OutputPath>bin\$(Configuration)\</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>UNIX</DefineConstants>
-    <OutputPath>bin\ReleaseUnix\</OutputPath>
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <ItemGroup>
+  <PropertyGroup Condition="!$(Configuration.Contains('Unix'))">
+    <DefineConstants>WIN;$(DefineConstants)</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(Configuration.Contains('Unix'))">
+    <DefineConstants>UNIX;$(DefineConstants)</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>    <!-- System libs -->
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Core" />
@@ -77,15 +71,25 @@
     <Reference Include="System" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup>    <!-- External libs -->
     <Reference Include="..\..\External\*.dll" />
-    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\*.dll">
+  </ItemGroup>
+
+  <ItemGroup Condition="!$(Configuration.Contains('Unix'))">    <!-- Windows packages -->
+    <Reference Include="..\..\Rust\windows\RustDedicated_Data\Managed\*.dll">
       <PrivateAssets>all</PrivateAssets>
       <SpecificVersion>false</SpecificVersion>
     </Reference>
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="$(Configuration.Contains('Unix'))">    <!-- Linux packages -->
+    <Reference Include="..\..\Rust\linux\RustDedicated_Data\Managed\*.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>    <!-- Nuget packages -->
     <PackageReference Include="Costura.Fody" Version="5.7.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -93,6 +97,10 @@
     <PackageReference Include="protobuf-net.Core" Version="3.1.17" />
   </ItemGroup>
 
+
+  <!-- ========================== -->
+  <!-- BUILD TASK SEQUENCER BELOW -->
+  <!-- ========================== -->
   <Target Name="CleanOutput" AfterTargets="Clean">
     <Delete Files="$(OutputPath)Carbon.dll" />
     <Delete Files="$(OutputPath)$(TargetName).dll" />
@@ -115,11 +123,15 @@
       <Gitag>-$(GitBranch)-$(GitCommitHash)</Gitag>
     </PropertyGroup>
 
-    <Message Text="&gt;&gt; Build id tag is $(Gitag)" Importance="high" />
     <WriteLinesToFile File="$(SolutionDir)Carbon\.gitag" Overwrite="true" Lines="$(Gitag)" />
-
-    <Message Text="&gt;&gt; RandomASM property set to $(RandomASM)" Importance="high" />
     <WriteLinesToFile File="$(SolutionDir)Carbon\.rndasm" Overwrite="true" Lines="$(RandomASM)" />
+  </Target>
+
+  <Target Name="CustomBeforeCompile" BeforeTargets="BeforeCompile">
+    <Message Text="&gt;&gt; Build ID: $(InformationalVersion)" Importance="high" />
+    <Message Text="&gt;&gt; Build Target: $(Configuration)|$(Platform)" Importance="high" />
+    <Message Text="&gt;&gt; Build Assembly Name: $(AssemblyName)" Importance="high" />
+    <Message Text="&gt;&gt; Build Constants: $(DefineConstants)" Importance="high" />
   </Target>
 
   <Target Name="CustomAfterBuild" AfterTargets="AfterBuild">
