--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -150,7 +150,7 @@ jobs:
           
           ${{ needs.build-linux.outputs.build_info }}
 
-          Production: https://github.com/Carbon-Modding/Carbon.Core/releases/latest
+          [stable]: https://github.com/Carbon-Modding/Carbon.Core/releases/latest
         files: |
           Release/Carbon.dll
           Release/Carbon.Patch.zip
