--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -72,8 +72,7 @@
   </ItemGroup>
 
   <ItemGroup>    <!-- External libs -->
-    <Reference Include="..\..\External\Humanlights.System.dll" />
-    <Reference Include="..\..\External\Humanlights.Unity.dll" />
+    <Reference Include="..\..\External\*.dll" />
   </ItemGroup>
 
   <ItemGroup Condition="!$(Configuration.Contains('Unix'))">    <!-- Windows packages -->
@@ -93,12 +92,11 @@
   <ItemGroup>    <!-- Nuget packages -->
     <PackageReference Include="Costura.Fody" Version="5.7.0">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" />
-    <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="3.6.0" />
     <PackageReference Include="protobuf-net" Version="3.1.17" />
     <PackageReference Include="protobuf-net.Core" Version="3.1.17" />
+    <PackageReference Include="Roslynator.CSharp" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
