--- a/Carbon.Core/.editorconfig
+++ b/Carbon.Core/.editorconfig
@@ -5,6 +5,7 @@ root = true
 # All files
 [*]
 indent_style = tab
+end_of_line = crlf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
