--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -17,7 +17,7 @@ on:
     - cron: '0 5 * * 0'
 
   workflow_run:
-    workflows: [branch-merge]
+    workflows: [ "branch-merge" ]
     types:
       - completed
     branches:
@@ -148,7 +148,7 @@ jobs:
           
           ${{ needs.build-linux.outputs.build_info }}
 
-          Production: https://github.com/Carbon-Modding/Carbon.Core/releases/latest
+          [stable]: https://github.com/Carbon-Modding/Carbon.Core/releases/latest
         files: |
           Release/Carbon.dll
           Release/Carbon.Patch.zip
