Updated logging (use c.debug>0 for more verbosity) Stripped singleton Stripped comments (sorry kas lol) Added Ben.Demystifier (thanks Grim) Finalized Entities.Get<T>(inherit) Fixed hook fuckups once and for all (some would unpatch when they shouldn't)

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
 
   <ItemGroup>    <!-- Nuget packages -->
+    <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
     <PackageReference Include="Costura.Fody" Version="5.7.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
