Added c.usev2harmony which toggles between v1 and v2 (v2 by default) Removed Carbon.Addons system - obsolete Reorganised and stripped out a few path related properties/getter methods from CarbonCore

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -60,6 +60,9 @@
   </PropertyGroup>
 
   <ItemGroup>    <!-- System libs -->
+    <Reference Include="0Harmonyv2">
+      <HintPath>..\..\..\Carbon.Harmony\Harmony\bin\Release\net48\0Harmonyv2.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Core" />
