--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -104,6 +104,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="MonoMod.Common" Version="22.6.3.1" />
 		<PackageReference Include="protobuf-net" Version="3.1.17" />
 		<PackageReference Include="protobuf-net.Core" Version="3.1.17" />
 		<PackageReference Include="Roslynator.CSharp" Version="4.1.1" />
