--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -8,6 +8,9 @@
 		<OutputType>Library</OutputType>
 		<TargetFrameworks>net48</TargetFrameworks>
 
+		<!-- Removes the localized Microsoft.CodeAnalysis.*.resources.dll -->
+		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+
 		<Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
 		<PlatformTarget>x64</PlatformTarget>
 		<Platforms>AnyCPU;x64</Platforms>
@@ -78,7 +81,6 @@
 	<ItemGroup>
 		<!-- External libs -->
 		<Reference Include="..\..\External\*.dll" />
-		<Reference Include="..\..\Tools\0Harmonyv2\Harmony\bin\Release\net48\*.dll" />
 	</ItemGroup>
 
 	<ItemGroup Condition="!$(Configuration.Contains('Unix'))">
@@ -102,11 +104,11 @@
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1" />
 		<PackageReference Include="Costura.Fody" Version="5.7.0">
 			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="protobuf-net" Version="3.1.17" />
 		<PackageReference Include="protobuf-net.Core" Version="3.1.17" />
 		<PackageReference Include="Roslynator.CSharp" Version="4.1.1" />
+		<PackageReference Include="MonoMod" Version="22.5.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -169,9 +171,9 @@
 		</ItemGroup>
 
 		<Message Text="&gt;&gt; Cleaning output folder" Importance="high" />
-		<Delete Files="@(FilesToDelete)">
+		<!--<Delete Files="@(FilesToDelete)">
 			<Output TaskParameter="DeletedFiles" ItemName="FilesDeleted" />
-		</Delete>
+		</Delete>-->
 	</Target>
 
 	<PropertyGroup Condition="Exists('.gitag')">
