--- a/Tools/Helpers/doorstop_config.ini
+++ b/Tools/Helpers/doorstop_config.ini
@@ -1,14 +1,8 @@
-#  ______ _______ ______ ______ _______ _______ 
-# |      |   _   |   __ \   __ \       |    |  |
-# |   ---|       |      <   __ <   -   |       |
-# |______|___|___|___|__|______/_______|__|____|
-#         github.com/Carbon-Modding/Carbon.Core
-
 [General]
-enabled=true
-target_assembly=RustDedicated_Data/Managed/Carbon.Doorstop.dll
-redirect_output_log=false
-ignore_disable_switch=false
+enabled = true
+target_assembly = RustDedicated_Data/Managed/Carbon.Doorstop.dll
+redirect_output_log = false
+ignore_disable_switch = false
 
 [UnityMono]
-debug_enabled=false
+debug_enabled = false
