--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -14,7 +14,7 @@ on:
     - cron: '0 5 * * 0'
 
   workflow_run:
-    workflows: [ "branch-merge" ]
+    workflows: [ branch-merge ]
     types:
       - completed
     branches:
