--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -123,7 +123,7 @@ jobs:
     needs: [ "build-linux", "build-windows" ]
     runs-on: ubuntu-latest
 
-    if: github.event_name == 'workflow_run' || (github.event_name == 'schedule' && needs.build-linux.outputs.wipe == 'true')
+    if: ${{ (github.event_name == 'workflow_run') || (github.event_name == 'schedule' && needs.build-linux.outputs.wipe == 'true') }}
 
     steps:
     - name: ⬇️ Download artifacts
