bruh these actions

--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -6,6 +6,9 @@ name: Develop Build
 concurrency: build-3-develop
 
 on:
+  schedule:
+    - cron: '0 5 * * *'
+
   push:
     branches:
       - develop
@@ -13,9 +16,6 @@ on:
   pull_request:
     branches:
       - develop
-
-  schedule:
-    - cron: '0 5 * * *'
 
   workflow_dispatch:
 
@@ -31,6 +31,9 @@ jobs:
       ref:   ${{ steps.step1.outputs.ref }}
 
     steps:
+      - name: 🪵 Log environment
+        uses: crazy-max/ghaction-dump-context@v1
+        
       - name: 🔗 Checkout source code from github
         uses: actions/checkout@v3
         with:
