--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -6,19 +6,14 @@ name: Production Build
 concurrency: build-1-production
 
 on:
+  schedule:
+    - cron: '30 18 * * 4'
+    
   push:
     branches:
       - production
 
-  schedule:
-    - cron: '30 18 * * 4'
-
-  workflow_run:
-    workflows: [Branch Merge]
-    types:
-      - completed
-    branches:
-      - production
+  workflow_dispatch:
 
 jobs:
   bootstrap:
@@ -33,6 +28,9 @@ jobs:
       wipe:  ${{ steps.step1.outputs.wipe }}
 
     steps:
+      - name: 🪵 Log environment
+        uses: crazy-max/ghaction-dump-context@v1
+
       - name: 🔗 Checkout source code from github
         uses: actions/checkout@v3
         with:
@@ -123,7 +121,7 @@ jobs:
     needs: [ "build-linux", "build-windows" ]
     runs-on: ubuntu-latest
 
-    if: ${{ (github.event_name == 'workflow_run') || (github.event_name == 'schedule' && needs.build-linux.outputs.wipe == 'true') }}
+    if: ${{ (github.event_name == 'push') || (github.event_name == 'workflow_dispatch') || (github.event_name == 'schedule' && needs.build-linux.outputs.wipe == 'true') }}
 
     steps:
     - name: ⬇️ Download artifacts
