--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -6,19 +6,14 @@ name: Staging Build
 concurrency: build-2-staging
 
 on:
+  schedule:
+    - cron: '0 5 * * 0'
+
   push:
     branches:
       - staging
 
-  schedule:
-    - cron: '0 5 * * 0'
-
-  workflow_run:
-    workflows: [Branch Merge]
-    types:
-      - completed
-    branches:
-      - staging
+  workflow_dispatch:
 
 jobs:
   bootstrap:
@@ -32,6 +27,9 @@ jobs:
       ref:   ${{ steps.step1.outputs.ref }}
 
     steps:
+      - name: 🪵 Log environment
+        uses: crazy-max/ghaction-dump-context@v1
+
       - name: 🔗 Checkout source code from github
         uses: actions/checkout@v3
         with:
