Script loaders keep generic processor instances Removed placebo hooks Process [Hook.AlwaysPatched] hooks on Carbon boot and never touch them again until shutdown Fixed load/unload/reload commands to work with scripts/dlls & drms Properly dispose DRM entries from memory Marked all core hooks as hidden/always patched

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -132,6 +132,10 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Hooks\Carbon\Core\" />
+	</ItemGroup>
+
 
 	<!-- ========================== -->
 	<!-- BUILD TASK SEQUENCER BELOW -->
