--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -119,6 +119,10 @@
 		<PackageReference Include="Roslynator.CSharp" Version="4.1.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Hooks\Carbon\Core\" />
+	</ItemGroup>
+
 
 	<!-- ========================== -->
 	<!-- BUILD TASK SEQUENCER BELOW -->
