--- a/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
+++ b/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
@@ -18,7 +18,7 @@
 
 	<PropertyGroup>
 		<!-- User defined properties -->
-		<Product>Carbon</Product>
+		<Product>Carbon.Doorstop</Product>
 		<AssemblyName>Carbon.Doorstop</AssemblyName>
 
 		<Company>Carbon Community</Company>
