--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -107,6 +107,9 @@
 		<Reference Include="..\..\Tools\HarmonyLib\Harmony\bin\Release\net48\1Harmony.dll">
 			<PrivateAssets>all</PrivateAssets>
 		</Reference>
+		<Reference Include="Resources\*.dll">
+			<PrivateAssets>all</PrivateAssets>
+		</Reference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -119,6 +122,7 @@
 		<PackageReference Include="Ben.Demystifier" Version="0.4.1">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="MySql.Data" Version="8.0.31" />
 
 		<!-- Required by Carbon's Compiler -->
 		<PackageReference Include="protobuf-net.Core" Version="3.1.17">
@@ -130,6 +134,7 @@
 		<PackageReference Include="Roslynator.CSharp" Version="4.1.1">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="System.Data.SQLite" Version="1.0.116" />
 	</ItemGroup>
 
 
